# sliding-puzzle-solver

./: CMakeLists.txt  README.md
include/: solver.hpp
src/: main.cpp  solver.cpp
test/: CMakeLists.txt  test_dfs.cpp
